--- a/_config.yml
+++ b/_config.yml
@@ -54,7 +54,7 @@ mathjax: true
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
 sidebar-about-description: ""
-sidebar-avatar:      # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-avatar: "https://jack-btype.github.io/img/avatar.jpg"      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 # Featured Tags
 featured-tags: true                     # whether or not using Feature-Tags
